[gd_scene load_steps=2 format=3 uid="uid://cmhumjviovvam"]

[ext_resource type="Script" uid="uid://b8mb8vusyeql0" path="res://kodlar/nasıl_oynanır.gd" id="1_765f2"]

[node name="Arkaplan rengi" type="ColorRect"]
anchors_preset = -1
anchor_right = 0.004
anchor_bottom = 0.011
offset_left = 48.0
offset_top = 31.0
offset_right = 1959.32
offset_bottom = 1099.12
color = Color(0.423529, 0.270588, 0.533333, 1)
script = ExtResource("1_765f2")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = 100.0
offset_right = 647.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "1. oyuncu kontrolleri"

[node name="Label3" type="Label" parent="Label"]
layout_mode = 0
offset_top = 133.0
offset_right = 290.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 30
text = "Yukarı Gitme  : "

[node name="Label4" type="Label" parent="Label"]
layout_mode = 0
offset_top = 184.0
offset_right = 290.0
offset_bottom = 235.0
theme_override_font_sizes/font_size = 30
text = "Aşağı Gitme    : "

[node name="TextEdit" type="TextEdit" parent="Label"]
layout_mode = 0
offset_left = 238.0
offset_top = 133.0
offset_right = 490.0
offset_bottom = 184.0
placeholder_text = "w"

[node name="TextEdit2" type="TextEdit" parent="Label"]
layout_mode = 0
offset_left = 238.0
offset_top = 184.0
offset_right = 490.0
offset_bottom = 235.0
placeholder_text = "s"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 157.0
offset_top = 581.0
offset_right = 552.0
offset_bottom = 681.0
text = "Geri Dön"

[node name="Label2" type="Label" parent="."]
offset_left = 935.0
offset_top = 100.0
offset_right = 1425.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "2. oyuncu kontrolleri"

[node name="Label3" type="Label" parent="Label2"]
layout_mode = 0
offset_top = 133.0
offset_right = 290.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 30
text = "Yukarı Gitme  : "

[node name="Label4" type="Label" parent="Label2"]
layout_mode = 0
offset_top = 184.0
offset_right = 290.0
offset_bottom = 235.0
theme_override_font_sizes/font_size = 30
text = "Aşağı Gitme    : "

[node name="TextEdit3" type="TextEdit" parent="Label2"]
layout_mode = 0
offset_left = 238.0
offset_top = 133.0
offset_right = 490.0
offset_bottom = 184.0
placeholder_text = "up"

[node name="TextEdit4" type="TextEdit" parent="Label2"]
layout_mode = 0
offset_left = 238.0
offset_top = 184.0
offset_right = 490.0
offset_bottom = 235.0
placeholder_text = "down"

[connection signal="gui_input" from="Label/TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="gui_input" from="Label/TextEdit2" to="." method="_on_text_edit_2_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="Label2/TextEdit3" to="." method="_on_text_edit_3_gui_input"]
[connection signal="gui_input" from="Label2/TextEdit4" to="." method="_on_text_edit_4_gui_input"]
